Fix internews footer image and stop it overlapping the form

--- a/internewshid/media/less/internews.less
+++ b/internewshid/media/less/internews.less
@@ -68,7 +68,7 @@ ul.nav.nav-pills:after{
             width: 183px;
             margin-left: 23%;
             margin-top: 12%;
-        
+
         span{
             color: @brand-primary;
             margin: 0;
@@ -359,13 +359,10 @@ ul.nav.nav-pills:after{
 //Project info
 
 .project-info {
-  position: fixed;
-  bottom: 30px;
   text-align: center;
   width: 250px;
   font-size:12.5px;
   margin:0;
-  z-index:@zindex-navbar-fixed;
 }
 
 @media(max-width:@screen-sm){
